# goatattack

./: .gitignore  .gitmodules  .travis.yml  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  configure  configure.ac  server_ctf.conf  server_dm.conf
data/: Makefile.am  Makefile.in
data/files/animations/: bomb.animation  bomb_explosion.animation  disappear.animation  grenade.animation  grenade_explosion.animation  hearts.animation  picked_up_1.animation  picked_up_flag.animation  picked_up_frog.animation  player_afk.animation  player_spawn.animation  shot_splash.animation  spawn.animation  spawn_coin.animation
data/files/backgrounds/: blue.background  egypt.background  forest.background  hills.background  mountains.background  space2.background  stars.background  sunset.background  winter.background  winter_night.background
data/files/charactersets/: goat.characterset
data/files/fonts/: normal.fds  normal.font  points.fds
data/files/game/: ctc.game  goh.game  tdm.game
data/files/icons/: ammo.icon  beta.icon  blank.icon  bolt.icon  checkbox_half.icon  down_scroll.icon  enemy_indicator_blue_flag.icon  grenade.icon  hud_ctf.icon  hud_tdm.icon  hudbase.icon  left_scroll.icon  map_preview.icon  mb_ll_pressed.icon  mb_lr.icon  mb_ul.icon  mb_ur_pressed.icon  me_clean.icon  me_move.icon  me_objects.icon  me_select.icon  mouse.icon  mouse_move.icon  msg_information.icon  msg_question.icon  object_coin.ase  option_half.icon  option_off.icon  scanlines.icon  select.icon  shield_empty.icon  team_badge_blue.icon  time.icon  title_brick.icon  title_goat.icon  up_scroll.icon
data/files/maps/: ctc1.lmp  ctc1.map  ctc2.lmp  ctc3.lmp  ctc3.map  ctc4.map  ctc5.lmp  ctc5.map  ctf1.lmp  ctf1.map  ctf3.lmp  ctf4.lmp  ctf4.map  ctf5.lmp  ctf5.map  dm1.lmp  dm1.map  dm2.lmp  dm2.map  dm3.lmp  dm3.map  dm4.lmp  dm4.map  dm5.lmp  dm5.map  dm6.map  dm7.lmp  dm7.map  goh1.lmp  goh1.map  goh2.lmp  goh2.map  goh3.lmp  goh3.map  sr1.lmp  sr1.map  sr2.lmp  sr2.map
data/files/music/: comets_colliding.music  golden_moments.music  insomnia.music  otomo.music  pulsar.music  tpolmgirl.music
data/files/objects/: ammo.object  ammobox.object  bomb.object  bulb.object  flag_red.object  frog.object  gold_diamond.object  key.object  medikit_big.object  purple_diamond.object  spawn_point_red.object
data/files/shaders/: base.frag  base.vert
data/files/sounds/: bomb_explosion.sound  croak.sound  drums.sound  error.sound  flag_dropped.sound  flag_scored.sound  friendly_fire.sound  frog_explosion.sound  game_over.sound  goh_scored.sound  grenade_drop.sound  grenade_explosion.sound  ground_bump.sound  hurt.sound  menu_construction.sound  picked_up_frog.sound  picked_up_shotgun.sound  ready.sound  round_complete_best.sound  shot.sound  spawn.sound
data/files/tilesets/: base.tileset  digits.tileset  numbers.tileset
data/free/animations/: bomb.animation  bomb_explosion.animation  bubbles.animation  die.animation  frog_explosion.animation  frog_spawn.animation  grave.animation  grenade.animation  grenade_explosion.animation  picked_up_coin.animation  shot.animation  spawn_flag.animation
data/free/backgrounds/: egypt.background  night.background  savannah.background  space.background
data/free/charactersets/: goat.characterset  shepherd.characterset  tux.characterset
data/free/fonts/: big.fds  big.font  console.fds  console.font  normal.font  points.font
data/free/game/: base.game  ctf.game  dm.game  sr.game
data/free/icons/: bomb.icon  center.icon  chat.icon  checkbox_checked.icon  checkbox_unchecked.icon  default.icon  enemy_indicator_blue.icon  enemy_indicator_coin.icon  enemy_indicator_neutral.icon  enemy_indicator_red.icon  enemy_indicator_red_flag.icon  frog.icon  grass.icon  hud_ctc.icon  hud_dm.icon  hud_goh.icon  hud_sr.icon  hudovl.icon  light_source.icon  lives.icon  lives_empty.icon  lives_half.icon  lock.icon  map_border.icon  mb_ll.icon  mb_lr_pressed.icon  mb_ul_pressed.icon  mb_ur.icon  me_calclight.icon  me_calclight_pixel.icon  me_center.icon  me_exit.icon  me_hcopy.icon  me_load.icon  me_options.icon  me_pack.icon  me_properties.icon  me_save.icon  me_tile.icon  msg_error.icon  (+16 more)
data/free/maps/: ctc1.lmp  ctc2.map  ctc3.map  ctc4.lmp  ctc4.map  ctc5.lmp  ctf1.lmp  ctf1.map  ctf2.lmp  ctf2.map  ctf3.map  ctf4.map  ctf5.lmp  ctf5.map  ctf6.lmp  ctf6.map  dm1.lmp  dm10.map  dm2.map  dm3.map  dm5.lmp  dm6.lmp  dm7.lmp  dm7.map  dm8.lmp  dm8.map  dm9.lmp  dm9.map  goh1.map  goh2.lmp  goh2.map  goh3.lmp  goh3.map  sr1.lmp  sr1.map  sr2.lmp  sr2.map  sr3.lmp  sr3.map
data/free/npcs/: frog.npc
data/free/objects/: armor.object  coin.object  flag_blue.object  frog.object  grenade.object  medikit_small.object  shotgun.object  spawn_point_blue.object  spawn_point_frog.object
data/free/shaders/: base.shader  base.vert
data/free/sounds/: bomb_drop.sound  chat.sound  coin_catched.sound  crested.sound  die.sound  flag_catched.sound  frog_die.sound  frog_drop.sound  frog_spawn.sound  goh_leaved.sound  jump.sound  lobby.sound  picked_up_1.sound  respawn.sound  round_complete.sound  spawn_flag.sound  unbalanced.sound  warm_up.sound
data/free/tilesets/: base.tileset  castle.tileset  farm.tileset  numbers.tileset  space.tileset
data/non-free/music/: dead_feelings.music  doskpop.music  eight_bit_origins.music  norway.music  red_bulldozer.music
src/Cargo/: Makefile.am  main.cpp
src/Cargo/include/: Cargo.hpp
src/Cargo/man/: goatattack-cargo.6
src/Cargo/src/: Cargo.cpp
src/Engine/: Makefile.am  Makefile.in  game.mk  main.cpp
src/Engine/include/: ButtonNavigator.hpp  Client.hpp  ClientServer.hpp  Game.hpp  GameProtocol.hpp  GameserverInformation.hpp  KeyBinding.hpp  LANBroadcaster.hpp  Lagometer.hpp  MainMenu.hpp  MapConfiguration.hpp  MasterQuery.hpp  MasterQueryClient.hpp  MessageSequencer.hpp  OptionsMenu.hpp  Player.hpp  Protocol.hpp  Server.hpp  ServerAdmin.hpp  Tournament.hpp  (+10 more)
src/Game/: Makefile.am
src/MapEditor/: .clang_complete  Makefile.am  Makefile.in  main.cpp
src/MasterServer/: Makefile.am  Makefile.in  main.cpp
src/Server/: Makefile.am
(+313 files in other folders)
