bin_PROGRAMS = goatattack-masterserver
goatattack_masterserver_SOURCES = main.cpp
goatattack_masterserver_SOURCES += src/MasterServer.cpp
goatattack_masterserver_SOURCES += ../shared/src/Exception.cpp ../shared/src/Mutex.cpp ../shared/src/Timing.cpp ../shared/src/UDPSocket.cpp ../shared/src/TCPSocket.cpp
goatattack_masterserver_CXXFLAGS = -I ./include -I ../shared/include -Wno-unused-result
